# Collection.Of.Cpp.Utility.Tools

./: CMakeLists.txt  LICENSE  README.md  build.sh
abseil/crc/: CMakeLists.txt  Makefile  crc_demo.cpp
abseil/string_view/examples/: CMakeLists.txt  abseil-cpp  build_by_cmake.sh
bignumber/examples/: BigNumber  CMakeLists.txt  Makefile  build_by_cmake.sh  demo.cpp
catch2/v2/examples/: CMakeLists.txt  catch2  test.cpp
cmake/gitversion/src/: CMakeLists.txt  build_by_cmake.sh  config.h  config.h.in  test.c
code/: CMakeLists.txt
code/alarm_clock/: README.md
code/alarm_clock/recipe-01/: README.md
code/chunk_by_time_file_writer/: README.md
code/chunk_by_time_file_writer/recipe-01/: Makefile  README.md  chunk_by_time_file_writer.cpp  chunk_by_time_file_writer.hpp  test_chunk_by_time_file_writer.cpp
code/chunk_by_time_file_writer/recipe-02/: README.md  chunk_by_time_file_writer.cpp  chunk_by_time_file_writer.hpp  (+1 more)
code/doc/: README.txt  clean_doc.sh
code/error_message/: README.md
code/frame_delay_checker/: README.md
code/frame_delay_monitor/: README.md
code/graph/: README.md
code/include/: BulkMemoryPool.hpp  ByteMemoryPool.hpp  DelayTaskQueue.hpp  DumpHelper.hpp  MTMemoryPool.hpp  MemoryPool.hpp  RCIPtr.hpp  RCObject.hpp  RCPtr.hpp  Singleton.hpp  SpinLock.hpp  Stopwatch.hpp  TaskQueue.hpp  TimerBaseChrono.hpp  WorkerThread.hpp  dump_functions.hpp  error.hpp
code/interprocess_once/: README.md
code/interprocess_semaphore/: boost  posix
code/limitedsize_queue/: README.md
code/list/: README.md
code/memory_dump/: README.md
code/memory_pool/: README.md
code/named_mutex/: README.md  boost
code/named_semaphore/: boost
code/object_pool/: README.md
code/pipeline/: README.md
code/random/: README.md
code/random.Random/: README.md
code/random_number/: README.md
code/reference_count_pointer/: README.md
code/ring_buffer/: README.md
code/samples/: CMakeLists.txt
code/shared_memory/: README.md  benchmark  boost  posix
code/simple_timer/: README.md
code/singleton/: README.md
code/socket/: README.md
code/spin_lock/: README.md
code/src/: BulkMemoryPool.cpp  ByteMemoryPool.cpp  CMakeLists.txt  Makefile  RCObject.cpp  WorkerThread.cpp  gen_mini_utils_header.sh
code/stop_watch/: README.md
code/thread_pool/: README.md
code/threading.Thread/: README.md
code/threading.Timer/: README.md
code/threading.Timer2/: README.md
code/threadsafe_queue/: README.md
code/threadsafe_queue2/: README.md
code/timer/: README.md
code/vector/: README.md
code/worker_thread/: README.md
code/worker_thread2/: README.md
cxxopts/examples/: CMakeLists.txt  argopt.cpp  build_by_cmake.sh  demo1.cpp  longopt.cpp  myprogram.cpp  test.sh  unit_test.cpp  upgrade.cpp
cxxopts/posix/: CMakeLists.txt  Makefile  argopt.c  longopt.c  test.sh
ghc_filesystem/examples/: CMakeLists.txt  Makefile  printdir.cpp  printdir2.cpp
gsl/examples/: CMakeLists.txt  main.cpp  recipe_6_10.h
samples/: CMakeLists.txt  Makefile  list_make_dir.sh  update_subdir.sh
samples/LCS/: Makefile  sample_LCS1.cpp  sample_LCS2.cpp
samples/benchmark_memory_alloc/: Makefile  benchmark_memory_alloc.cpp
samples/bulk_memory_pool/: CMakeLists.txt  rational.cpp  rational.hpp  sample_bulk_memory_pool1.cpp
samples/byte_memory_pool/: rational.cpp  rational.hpp
samples/delay_task_queue/: Makefile  sample_delay_task_queue2.cpp  sample_task_queue2.cpp
samples/dump_functions/: sample_dump1.cpp
samples/dump_helper/: benchmark_dump1.cpp  sample_dump_helper1.cpp
samples/heap_functions/: benchmark_heap_functions1.cpp  benchmark_heap_functions2.cpp  sample_heap_functions1.cpp  sample_heap_functions2.cpp
samples/heap_sort/: sample_heap_sort1.cpp  sample_heap_sort2.cpp
samples/memory_pool/: CMakeLists.txt  Makefile  rational.cpp  rational.hpp
samples/mt_memory_pool/: CMakeLists.txt  Makefile
samples/mt_queue/: sample_mt_queue1.cpp  sample_mt_queue2.cpp
samples/priority_queue/: Makefile  benchmark_priority_queue1.cpp  sample_priority_queue1.cpp
samples/priority_queue_ref/: benchmark_priority_queue1.cpp  sample_priority_queue_ref1.cpp  sample_priority_queue_ref2.cpp
samples/random_number/: benchmark_rand_int1.cpp  benchmark_rand_real1.cpp  benchmark_random_seed1.cpp  sample_frandom.cpp  sample_frandom1.cpp  sample_rand_int1.cpp  sample_rand_real1.cpp  sample_random_seed1.cpp
samples/rc_ptr/: CMakeLists.txt  Makefile  benchmark_rc_ptr.cpp  rc_widget.hpp  sample_rc_ptr.cpp
samples/rci_ptr/: Makefile  rc_widget.hpp  sample_rci_ptr.cpp
samples/search_functions/: benchmark_lower_bound1.cpp  benchmark_lower_upper_bound1.cpp  benchmark_sequence_search1.cpp  sample_binary_search1.cpp  sample_lower_upper_bound1.cpp  sample_sequence_search1.cpp
samples/set_functions/: benchmark_set_difference1.cpp  benchmark_set_intersection1.cpp  benchmark_set_symmetric_difference1.cpp  benchmark_set_union1.cpp  sample_set_difference1.cpp  sample_set_intersection1.cpp  sample_set_symmetric_difference1.cpp  sample_set_union1.cpp
samples/singleton/: sample_singleton1.cpp  sample_singleton2.cpp  sample_singleton4.cpp
samples/sort_functions/: benchmark_radix_sort1.cpp  benchmark_sort.cpp  sample_heap_sort1.cpp  sample_heap_sort2.cpp  sample_heap_sort3.cpp  sample_radix_sort1.cpp  sample_selection_sort1.cpp  sample_selection_sort2.cpp
samples/spin_lock/: Makefile  sample_spin_lock1.cpp  sample_spin_lock2.cpp  sample_spin_lock3.cpp  sample_spin_lock4.cpp
samples/stopwatch/: CMakeLists.txt  Makefile  TimerBaseClock.hpp  sample_basic_stopwatch1.cpp  sample_basic_stopwatch2.cpp  sample_stopwatch1.cpp  sample_timer_base_chrono1.cpp  sample_timer_base_chrono2.cpp  sample_timer_base_chrono3.cpp  stopwatch03.h
samples/task_queue/: sample_task_queue1.cpp  sample_task_queue2.cpp
samples/thread/: Makefile  sample_thread1.cpp  sample_thread2.cpp
samples/timer/: sample_timer1.cpp
samples/worker_thread/: Makefile  sample_worker_thread1.cpp  sample_worker_thread2.cpp
vsomeip/request_response/: CMakeLists.txt  Makefile  readme.txt  run_client_default.sh  run_service_default.sh
(+2383 files in other folders)
