aux_source_directory(. SRC_FILE_LIST)

foreach(SRC_FILE ${SRC_FILE_LIST})
    get_filename_component(EXE_FILE ${SRC_FILE} NAME_WE)
    if (WIN32)
        set(EXE_FILE ${EXE_FILE}.exe)
    endif()
    add_executable(${EXE_FILE} ${SRC_FILE})
    target_link_libraries(${EXE_FILE} mini_util-static ${LIBS_SYSTEM})
endforeach()
